// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header component > renders with custom background color 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-middle css-bvelj9-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-40ys9k-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
          >
            Default Title
          </h1>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header component > renders with custom children content 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-middle css-1di5y52-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-40ys9k-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
          >
            Default Title
          </h1>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
          >
            <div>
              Custom Children
            </div>
          </h6>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header component > renders with custom maximum width 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-middle css-1di5y52-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-ho17r4-MuiContainer-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-40ys9k-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
          >
            Default Title
          </h1>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header component > renders with custom title 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-middle css-1di5y52-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-40ys9k-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
          >
            Custom Title
          </h1>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header component > renders with default props 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-middle css-1di5y52-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-40ys9k-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
          >
            Default Title
          </h1>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
